# FSI

./: .gitignore  .python-version  LICENSE.txt  README.md  pyproject.toml
src/fsi/: __about__.py  __init__.py  heptagonal.py  hexagonal.py  octagonal.py  trapezoidal.py  triangular.py
tests/: __init__.py  hexagonal_fsi_test.py  trapezoidal_fsi_test.py  triangular_fsi_test.py
