[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fsi"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "TBA5854", email = "adhavan5030@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/TBA5854/fsi#readme"
Issues = "https://github.com/TBA5854/fsi/issues"
Source = "https://github.com/TBA5854/fsi"

[tool.hatch.version]
path = "src/fsi/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/fsi tests}"

[tool.coverage.run]
source_pkgs = ["fsi", "tests"]
branch = true
parallel = true
omit = [
  "src/fsi/__about__.py",
]

[tool.coverage.paths]
fsi = ["src/fsi", "*/fsi/src/fsi"]
tests = ["tests", "*/fsi/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
